# project_labyrinth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  analyze.sh  build.sh
CORE/: CMakeLists.txt
CORE/src/: CORE-debug.c  CORE-system.c  CORE-tcp-client.c  CORE-tcp-server.c  disjoint-set.c
authserver/: CMakeLists.txt
authserver/src/: auth-command-types.c  auth-commands-processor.c  auth-io-system.c  main.c  message-processor.c  message.c
authserver/src/account/: account.c
authserver/src/authentication/: authentication.c
authserver/src/commands/: command-authenticate.c  command-join-lobby.c
authserver/src/messages/: message-authenticate.c
docs/: main-flow.txt
gameserver/: CMakeLists.txt
gameserver/src/: command.c  commands-io-system.c  commands-listener.c  commands-processor.c  game-server.c  gameserver-command-response.c  gameserver-command-types.c  gameserver-command.c  gameserver-commands-processor.c  lab-generation.c  lab-points-map-reader.c  lab-points-map.c  lab-session.c  main.c  player.c  room-info.c
gameserver/src/commands/: command-player-init.c  command-player-move.c  command-start-game.c
gameserver/test/: run-test-commands-listener.sh  run-test-disjoint-set.sh  run-test-lab-generation.sh  run-test-player.sh  run-tests.sh  test-commands-listener.c  test-disjoint-set.c  test-lab-generation.c  test-lab-session.c  test-player.c
include/: CORE.h  command.h  commands-listener.h  common.h  config.h  disjoint-set.h  game-server.h  in-out-system.h  labyrinth.h  player.h
include/CORE/: CORE-array-private.h  CORE-array.h  CORE-class.h  CORE-debug-private.h  CORE-debug.h  CORE-file.h  CORE-memory.h  CORE-object.h  CORE-safe-array-private.h  CORE-safe-array.h  CORE-string.h  CORE-system.h  CORE-tcp-client.h  CORE-tcp-server.h  CORE-types.h  CORE_Class.h  CORE_Object.h  CORE_String.h  disjoint-set.h
include/authserver/: account.h  auth-command-types.h  auth-commands-processor.h  auth-io-system.h  authentication.h  common.h  config.h  message-private.h  message-processor.h  message.h
include/core/: core-debug.h  core-dset.h
include/game-server/: command.h  game-server.h  in-out-system.h
include/gameserver/: CONFIG.h  command-private.h  command.h  commands-io-system.h  commands-listener.h  commands-processor.h  common.h  config.h  game-server-config.h  game-server.h  gameserver-command-private.h  gameserver-command-response-private.h  gameserver-command-response.h  gameserver-command-types.h  gameserver-command.h  gameserver-commands-processor.h  in-out-system.h  lab-generation.h  lab-points-map-reader.h  lab-points-map.h  lab-session.h  player.h  room-info-private.h  room-info.h
include/labyrinth/: lab-game-match.h  lab-generation.h  lab-point.h  lab-points-map-reader.h  lab-points-map.h  lab-session.h
include/libs/: token-record.h
lib/: CMakeLists.txt  disjoint-set.c
lib/CORE/: CORE-system.c  CORE_String.c
lib/commands-processor/include/: command-private.h  command.h  commands-processor.h
lib/commands-processor/src/: command.c  commands-processor.c
lib/tcp/: tcp-client.c  tcp-server.c
libs/: CMakeLists.txt
libs/core/: core-class.h  core-dset.h  core-types.h  core-utils.h  core.h
libs/data-buffer/: data-buffer.c
libs/packet/: packet.c  packet.h
libs/tcp/: tcp-client.c  tcp-client.cpp  tcp-client.h  tcp-server.c  tcp-server.cpp  tcp-server.h
libs/tokens-holder/: tokens-holder.c
libs/utils/: array.c  bytes-to-number.cpp  bytes-to-number.h  chunk-splitter.c  chunk-splitter.cpp  chunk-splitter.h
modules/: CMakeLists.txt
modules/gameserver/: gameserver.c  gameserver.cpp  gameserver.h  main.cpp  player-token.h  turn-state.h
modules/gameserver/packet/: packet.cpp  packet.h
modules/input-processor/: input-processor.c  packet-types.h
modules/iosystem/: iosystem.c  iosystem.cpp  iosystem.h
modules/labyrinth/: lab-generation.c  lab-generation.cpp  lab-generation.h  lab-point.cpp  lab-point.h  lab-points-map.c  lab-points-map.cpp  lab-points-map.h  lab-session.c  lab-session.cpp  lab-session.h
modules/labyrinth/player/: player-token.h  player.cpp  player.h
modules/packet-processor/: packet-processor.c  packet-processor.cpp  packet-processor.h  packet-type.h
modules/packet-processor/process-functions/: process-functions.c  process-functions.cpp  process-functions.h  process-join-lobby.c  process-join-lobby.cpp
modules/player/: move-direction.h  player.c  player.cpp  player.h
scripts/: run_tests.sh
scripts/linux/: static_analyzer.sh  valgrind.sh
src/: CMakeLists.txt  commands-listener.c  game-server.c  lab-generation.c  lab-point.c  lab-points-map-reader.c  lab-points-map.c  lab-session.c  main.c  player.c
temp/cpp-string/: CORE_String.cc  CORE_String.h  test-cpp-string.cc
test/: CMakeLists.txt  a.out  all-tests.c  all-tests.cpp  data-prim.json  lab-algo.c  lab-prim-algo.c  run-build-lab.sh  run-build-prim-lab.sh  run-test-commands-listener.sh  run-test-disjoint-set.sh  run-test-lab-generation.sh  run-test-lab-session.sh  run-test-player.sh  run-tests.sh  test-class.c  test-commands-listener.c  test-disjoint-set.c  test-lab-generation.c  test-lab-point.c  test-lab-session.c  test-player.c  test-string.c  valgrind.sh
test/CORE/: CMakeLists.txt  DUMP.txt  all-tests.c  test-core-array.c  test-core-object-private.c  test-core-object.c  test-core-tcp-client.c  test-core-tcp-server.c
test/authserver/: CMakeLists.txt  all-tests.c  test-auth-commands-processor.c  test-commands-processor.c  test-message.c  test-messages-processor.c
test/gameserver/: CMakeLists.txt  all-tests.c  all-tests.h  test-command.c  test-commands-listener.c  test-commands-processor.c  test-disjoint-set.c  test-lab-generation.c  test-lab-session.c  test-player.c
test/libs/: libs-tests.h
test/libs/packet/: packet-tests.h
test/libs/tokens-holder/: tokens-holder-tests.h
test/libs/utils/: utils-tests.h
test/modules/: modules-tests.h
test/modules/iosystem/: iosystem-tests.h
test/modules/labyrinth/: lab-generation-tests.h  lab-session-tests.h  labyrinth-tests.h
test/modules/player/: player-tests.h
web/: index.html
(+25 files in other folders)
